--- a/ui/settings.ui
+++ b/ui/settings.ui
@@ -66,7 +66,7 @@
            <x>10</x>
            <y>10</y>
            <width>401</width>
-           <height>171</height>
+           <height>61</height>
           </rect>
          </property>
          <layout class="QGridLayout" name="gridLayout_2">
@@ -87,13 +87,6 @@
            <widget class="QLabel" name="label_2">
             <property name="text">
              <string>Short URL Length </string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="label_3">
-            <property name="text">
-             <string>Max Short URL Length</string>
             </property>
            </widget>
           </item>
@@ -129,6 +122,13 @@
             </item>
            </layout>
           </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_3">
+            <property name="text">
+             <string>Max Short URL Length</string>
+            </property>
+           </widget>
+          </item>
           <item row="1" column="1">
            <layout class="QHBoxLayout" name="horizontalLayout_3">
             <item>
@@ -162,6 +162,33 @@
            </layout>
           </item>
          </layout>
+        </widget>
+        <widget class="QCheckBox" name="renamepasswdurls">
+         <property name="geometry">
+          <rect>
+           <x>10</x>
+           <y>70</y>
+           <width>401</width>
+           <height>21</height>
+          </rect>
+         </property>
+         <property name="font">
+          <font>
+           <pointsize>9</pointsize>
+          </font>
+         </property>
+         <property name="text">
+          <string>Rename passwd protected URLs in table</string>
+         </property>
+         <property name="checked">
+          <bool>false</bool>
+         </property>
+         <property name="autoExclusive">
+          <bool>false</bool>
+         </property>
+         <property name="tristate">
+          <bool>false</bool>
+         </property>
         </widget>
        </widget>
        <widget class="QWidget" name="tab_4">
